fix: implemented precompilation/preloading of erlang modules for single tests